# Portfolio

./: .gitignore  BACKLOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  portfolio.html
.github/workflows/: ci.yml  keepalive.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  main.py  rate_limit.py  security.py
backend/app/models/: analytics.py  auth.py  content.py  message.py
backend/app/routers/: analytics.py  auth.py  common.py  contact.py  content.py  images.py  messages.py
backend/app/services/: email.py  seed.py
backend/scripts/: hash_password.py
backend/tests/: conftest.py  test_analytics_messages.py  test_auth.py  test_contact.py  test_drafts_versions.py  test_health_content.py  test_images.py
e2e/: audit-admin.mjs  audit.mjs  make-og.mjs  portfolio.spec.js  verify-changes.mjs  verify-fixes.mjs
public/: robots.txt  sitemap.xml
src/: App.css  App.jsx  Portfolio.css  Portfolio.jsx  index.css  main.jsx
src/components/: About.jsx  AdminPanel.jsx  Contact.jsx  ContourBackground.jsx  CustomCursor.jsx  Experience.jsx  Footer.jsx  Hero.jsx  Icons.jsx  Nav.jsx  ProjectDetail.jsx  Projects.jsx  ScrollToTop.jsx  SectionIndicator.jsx  Skills.jsx  ThemeToggle.jsx
src/data/: defaults.js
src/hooks/: useContent.js  useMagnetic.js  useReducedMotionSafe.js  useScrollSpy.js
src/lib/: api.js  slug.js
src/motion/: variants.js
src/utils/: SimplexNoise.js
(+10 files in other folders)
