[project]
name = "portfolio-backend"
version = "1.0.0"
description = "FastAPI + MongoDB backend for the portfolio site"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on these calls in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Cookie",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
